commiting after everything works for most part

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,10 @@
 NODE_ENV=development
 PORT=1337
-DATABASE_URL=mongodb://localhost/travel-log
+DATABASE_URL=mongodb+srv://username:password@cluster0-har9q.mongodb.net/test?retryWrites=true&w=majority
+
+OLD_DATABASE_URL: mongodb://localhost/travel-log
 CORS_ORIGIN=http://localhost:3004
 PASSWORD=eliotissuperawesome
+
+
+///
