--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,6 @@
 NODE_ENV=development
 PORT=1337
-DATABASE_URL=mongodb://localhost/travel-log
+DATABASE_URL=mongodb+srv://soloprojectmongodb:soloprojectmongodb@soloprojectcluster-m1qrq.mongodb.net/test?retryWrites=true&w=majority
+
 CORS_ORIGIN=http://localhost:3000
 API_KEY=eliotissuperawesome
